yaml/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service-lb
spec:
  selector:
    app: tripviewer
  ports:
    - port: 8765
      targetPort: 80
  type: LoadBalancer
