yaml/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-poi
spec:
  selector:
    matchLabels:
      app: poi
  replicas: 1
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - image: "registryufe8262.azurecr.io/paoloceffa/poi"
        name: my-poi-pod
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: poi
  labels:
    run: poi-svclabel
spec:
  selector:
    app: poi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: poi
