yaml/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  labels:
    deploy: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - image: "registryufe8262.azurecr.io/paoloceffa/trips"
        imagePullPolicy: Always
        name: trips
        livenessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 80
          initialDelaySeconds: 5
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
        resources:
          limits:
            cpu: "0.15"
            memory: "256Mi"
          requests:
            cpu: "0.1"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
spec:
  selector:
    app: trips
  ports:
    - name: trips-http
      protocol: TCP
      port: 80
      targetPort: 80
