yaml/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  labels:
    app: user-java
spec:
  selector:
    matchLabels:
      app: user-java
  replicas: 1
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - image: "registryufe8262.azurecr.io/paoloceffa/user-java"
        name: user-java
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: "0.2"
            memory: "256Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: user-java
spec:
  selector:
    app: user-java
  ports:
  - name: user-java
    protocol: TCP
    port: 80
    targetPort: 80
